--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <td><div class="block-letter">Block C</div></td>
                         <td><div class="block-letter">Block H</div></td>
                         <td><div class="block-letter">Block D</div></td>
-                        <td><div class="block-letter">Block I</div></td>
+                        <td><div class="block-letter">Block I.</div></td>
                     </tr>
                     </tbody>
             </table>
